[gd_scene load_steps=3 format=3 uid="uid://main123"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_0x0x0"]
[ext_resource type="Theme" path="res://themes/DarkOrangeTheme.tres" id="2_0x0x0"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2_0x0x0")
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "YuPomo"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Focus • Break • Repeat"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="TimerDisplay" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer/TimerDisplay"]
layout_mode = 2
text = "25:00"
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 1

[node name="PhaseLabel" type="Label" parent="VBoxContainer/TimerDisplay"]
layout_mode = 2
text = "Focus Time"
label_settings = SubResource("LabelSettings_4")
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/TimerDisplay"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)
value = 100.0

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="Controls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "Start"
custom_minimum_size = Vector2(100, 50)

[node name="PauseButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "Pause"
custom_minimum_size = Vector2(100, 50)

[node name="ResetButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "Reset"
custom_minimum_size = Vector2(100, 50)

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="TaskSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TaskLabel" type="Label" parent="VBoxContainer/TaskSection"]
layout_mode = 2
text = "Current Task (Optional)"
label_settings = SubResource("LabelSettings_5")
horizontal_alignment = 1

[node name="TaskInput" type="LineEdit" parent="VBoxContainer/TaskSection"]
layout_mode = 2
placeholder_text = "Enter your current task..."
text = ""

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
custom_minimum_size = Vector2(0, 40)

[node name="Timer" type="Timer" parent="."]
one_shot = false

[node name="NotificationSound" type="AudioStreamPlayer" parent="."]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 48
font_color = Color(1, 0.647059, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 16
font_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3"]
font_size = 72
font_color = Color(1, 0.647059, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4"]
font_size = 18
font_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5"]
font_size = 14
font_color = Color(0.8, 0.8, 0.8, 1)
